plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.audit.climate'
version = '0.0.1-SNAPSHOT'
description = 'Real-Time Event Auditor for Climate Data Streams'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

configurations {
    mockitoAgent
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	implementation 'org.postgresql:postgresql'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation("org.flywaydb:flyway-database-postgresql")
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.amqp:spring-rabbit-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Testcontainers for integration tests
	testImplementation 'org.testcontainers:junit-jupiter:1.19.1'
	testImplementation 'org.testcontainers:postgresql:1.19.1'
	testImplementation 'org.testcontainers:rabbitmq:1.19.1'

	// Mockito as test dependency and javaagent
	testImplementation 'org.mockito:mockito-core'
	mockitoAgent('org.mockito:mockito-core') { transitive = false }
}

// Apply configuration to all Test tasks
tasks.withType(Test) {
    useJUnitPlatform()
    jvmArgs += ['-XX:+EnableDynamicAgentLoading']
    jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
}